Login, register, join group, create group

--- a/flatman/templates/base.html
+++ b/flatman/templates/base.html
@@ -17,10 +17,6 @@
         <nav class="navbar navbar-default navbar-inverse" role="navigation">
             <div class="container">
                 <div class="navbar-header">
-                <div class="navbar-left hidden-sm hidden-xs">
-                    <a class="btn navbar-btn btn-sm btn-default" href="https://mafiasi.de" style="margin-top: 10px;">
-                        <i class="fa fa-home"></i> Flatman
-                    </a>
                 </div>
             </div>
         </nav>
@@ -31,9 +27,10 @@
             {% endblock %}
         </div>
 
+        <hr />
         <footer>
             <div class="container">
-                FLATMAN!
+                This is Flatman.
             </div>
         </footer>
 
