--- a/flatman/templates/base.html
+++ b/flatman/templates/base.html
@@ -6,10 +6,12 @@
         <title>flatman</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+        <!-- <link href='http://fonts.googleapis.com/css?family=Noto+Sans' rel='stylesheet' type='text/css'> -->
         <link href="{{ url_for('static', filename='css/main.css') }}" rel="stylesheet" media="screen">
         <link href="{{ url_for('static', filename='css/bootstrap.css') }}" rel="stylesheet" media="screen">
-        <link href="{{ url_for('static', filename='css/bootstrap-theme.css') }}" rel="stylesheet" media="screen">
+        <!-- <link href="{{ url_for('static', filename='css/bootstrap-theme.css') }}" rel="stylesheet" media="screen"> -->
         <link rel="stylesheet" href="{{ url_for('static', filename='css/font-awesome.css') }}" media="screen">
+        <link href="{{ url_for('static', filename='css/main.css') }}" rel="stylesheet" media="screen">
         {% block head %}{% endblock %}
     </head>
 
