--- a/flatman/static/css/main.css
+++ b/flatman/static/css/main.css
@@ -1,48 +1,100 @@
-* {
-    /*font-family: "Noto Sans" !important;*/
+body {
+    font-family: "Noto Sans" !important;
 }
 
-.styled-form {
-    border: 1px solid #888;
-    border-radius: 4px;
-    background: #F0F7FF;
-}
-
-.styled-form .form-title {
-    border-radius: 4px 4px 0 0;
-    padding: 10px;
-    border-bottom: 1px solid #CCC;
-}
-
-.styled-form .form-title h2 {
+.navbar {
     margin: 0;
-    color: #005AAB;
-    font-size: 14pt;
-    font-weight: bold;
-    margin-bottom: 4px;
+    font-size: 14px;
+    border-radius: 0;
+    border: 0;
 }
 
-.styled-form .form-controls {
-
-}
-
-.styled-form .form-controls .form-group {
-    background: #E5E9EB; 
-    border-top: 1px solid #FFF;
-    border-bottom: 1px solid #CCC;
+html, body {
     margin: 0;
-    padding: 10px;
+    padding: 0;
+    min-height: 100%;
+    height: 100%;
+    line-height: 20px;
 }
 
-.styled-form .form-title p {
-    margin: 0;
+.content {
+    min-height: 100%;
+    height: auto !important;
+    height: 100%;
+    margin: 0 auto; /* the bottom margin is the negative value of the footer's height */
+    position: relative;
+    height: 100%;
+    padding: 0;
 }
 
-.styled-form .form-actions {
-    /*border-top: 1px solid #FFF;*/
-    padding: 10px;
+.menu {
+    width: 198px;
+    position: absolute;
+    top: 00px;
+    left: 0;
+    border-right: 1px solid #ccc;
+    bottom: 0;
+    overflow: auto;
+    background-color: #f2f2f2;
 }
 
-.styled-form .form-actions > * {
-    margin: 0;
+.content > :first-child {
+    margin-top: 0;
 }
+
+.padding {
+    padding: 2.5em;
+}
+
+.padding > :first-child { margin-top: 0; }
+.padding > :last-child { margin-bottom: 0; }
+
+.page {
+    margin-left: 200px;
+    margin-right: 0;
+    margin-top: 0;
+    min-height: 100%;
+    padding: 0;
+}
+
+.menu ul {
+    list-style: none;
+    padding: 0;
+    /*margin-top: 5em;*/
+}
+
+.menu ul li {
+    border-bottom: 1px solid #AAA;
+}
+
+.menu ul li:first-child {
+    /*border-top: 1px solid #AAA;*/
+}
+
+.menu ul li a {
+    font-size: 1.2em;
+    display: block;
+    padding: 0.6em 1em;
+    color: #888;
+    text-decoration: none;
+    transition: padding-left 0.2s ease-in-out;
+}
+
+.menu ul li a i {
+    display: inline-block;
+    width: 1.5em;
+    font-size: 1.1em;
+}
+
+.menu ul li a:hover {
+    background: #FAFAFA;
+    color: #555;
+    padding-left: 2em;
+}
+
+
+.menu ul li.active a {
+    background: #FFF;
+    color: #555;
+}
+
