--- a/flatman/templates/settings.html
+++ b/flatman/templates/settings.html
@@ -2,7 +2,6 @@
 
 {% block content %}
 <div class="padding">
-    <h1>Dashboard</h1>
-    <p>Empty :(</p>
+    <h1>Settings</h1>
 </div>
 {% endblock %}
