--- a/flatman/templates/base.html
+++ b/flatman/templates/base.html
@@ -1,53 +1,62 @@
-{% from "_macros.html" import alert, form_errors, field_error, markdown_info %}
-<!DOCTYPE html>
-<html>
-<head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>flatman</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+{% extends "_frame.html" %}
 
-    <link href='http://fonts.googleapis.com/css?family=Noto+Sans' rel='stylesheet' type='text/css'>
-    <link href="{{ url_for('static', filename='css/main.css') }}" rel="stylesheet" media="screen">
-    <link href="{{ url_for('static', filename='css/bootstrap.css') }}" rel="stylesheet" media="screen">
-    <!-- <link href="{{ url_for('static', filename='css/bootstrap-theme.css') }}" rel="stylesheet" media="screen"> -->
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/font-awesome.css') }}" media="screen">
-    <link href="{{ url_for('static', filename='css/main.css') }}" rel="stylesheet" media="screen">
-    {% block head %}{% endblock %}
-</head>
-
-<body>
-    <nav class="navbar navbar-fixed navbar-inverse" role="navigation">
-        <div class="navbar-text">
-            Title
+{% block base %}
+<!--     <nav class="navbar navbar-fixed navbar-inverse" role="navigation">
+        <div class="navbar-right">
+            <div class="navbar-text">
+                {{ current_user.displayname }}
+            </div>
         </div>
     </nav>
-
+ -->
     <div class="content">
         <div class="menu">
+            <div class="current-user">
+                <div class="avatar">
+                    <img src="{{ current_user.avatar_url }}" alt="" class="avatar avatar-48">
+                </div>
+                <div class="username">
+                    {{ current_user.displayname }}
+                    {% if current_group %}
+                    <div class="group">
+                        <!-- <i class="fa fa-users"></i>  -->
+                        {{ current_group.name }}
+                    </div>
+                    {% endif %}
+                </div>
+            </div>
+
+            <div class="menu-header">
+                General
+            </div>
             <ul>
-                <li class="active"><a href="#"><i class="fa fa-home"></i> Dashboard</a></li>
-                <li><a href="#"><i class="fa fa-users"></i> Members</a></li>
-                <li><a href="#"><i class="fa fa-shopping-cart"></i> Shopping</a></li>
-                <li><a href="#"><i class="fa fa-money"></i> Money</a></li>
-                <li><a href="#"><i class="fa fa-tasks"></i> Tasks</a></li>
-                <li><a href="#"><i class="fa fa-wrench"></i> Settings</a></li>
+                <li{% if request.endpoint.startswith("dashboard") %} class="active"{% endif %}><a href="{{ url_for('dashboard') }}"><i class="fa fa-home"></i>Dashboard</a></li>
+                <li{% if request.endpoint.startswith("account") %} class="active"{% endif %}><a href="#"><i class="fa fa-cogs"></i>Account</a></li>
+                {% if not current_group %}
+                <li{% if request.endpoint.startswith("find") %} class="active"{% endif %}><a href="#"><i class="fa fa-search"></i>Find Group</a></li>
+                {% endif %}
+                <li{% if request.endpoint.startswith("logout") %} class="active"{% endif %}><a href="{{ url_for('logout') }}"><i class="fa fa-sign-out"></i>Logout</a></li>
             </ul>
+
+            {% if current_group %}
+            <div class="menu-header">
+                Group
+            </div>
+            <ul>
+                <li{% if request.endpoint.startswith("members") %} class="active"{% endif %}><a href="{{ url_for('members') }}"><i class="fa fa-users"></i>Members</a></li>
+                <li{% if request.endpoint.startswith("shopping") %} class="active"{% endif %}><a href="{{ url_for('shopping') }}"><i class="fa fa-shopping-cart"></i>Shopping</a></li>
+                <li{% if request.endpoint.startswith("money") %} class="active"{% endif %}><a href="{{ url_for('money') }}"><i class="fa fa-money"></i>Money</a></li>
+                <li{% if request.endpoint.startswith("tasks") %} class="active"{% endif %}><a href="{{ url_for('tasks') }}"><i class="fa fa-tasks"></i>Tasks</a></li>
+                <li{% if request.endpoint.startswith("settings") %} class="active"{% endif %}><a href="{{ url_for('settings') }}"><i class="fa fa-wrench"></i>Settings</a></li>
+            </ul>
+            {% endif %}
         </div>
 
         <div class="page">
-            <div class="padding">
-                {% include "_flashes.html" %}
-                {% block content %}
-                {% endblock %}
-            </div>
+            {% include "_flashes.html" %}
+            {% block content %}
+            {% endblock %}
         </div>
     </div>
 
-    <script type="text/javascript" src="{{ url_for('static', filename='js/moment.min.js') }}"></script>
-    <script type="text/javascript" src="{{ url_for('static', filename='js/jquery.js') }}"></script>
-    <script type="text/javascript" src="{{ url_for('static', filename='js/bootstrap.js') }}"></script>
-    <script type="text/javascript" src="{{ url_for('static', filename='js/util.js') }}"></script>
-    <script type="text/javascript" src="{{ url_for('static', filename='js/main.js') }}"></script>
-    {% block foot %}{% endblock %}
-</body>
-</html>
+{% endblock %}
