--- a/flatman/templates/index.html
+++ b/flatman/templates/index.html
@@ -1,8 +1,9 @@
-{% extends "base_simple.html" %}
+{% extends "_base.html" %}
 
 {% block content %}
     <h1>Page index</h1>
+    
     <p>Hi there.</p>
 
-    <a href="{{ url_for('dashboard') }}" class="btn btn-primary">Go to Dashboard &raquo;</a>
+    <a href="{{ url_for('login') }}" class="btn btn-primary">Go to login &raquo;</a>
 {% endblock %}
