--- a/flatman/templates/_base.html
+++ b/flatman/templates/_base.html
@@ -7,12 +7,16 @@
     <title>flatman</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link href="{{ url_for('static', filename='css/main.css') }}" rel="stylesheet" media="screen">
-    <link href="{{ url_for('static', filename='css/bootstrap.css') }}" rel="stylesheet" media="screen">
-    <!-- <link href="{{ url_for('static', filename='css/bootstrap-theme.css') }}" rel="stylesheet" media="screen"> -->
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/font-awesome.css') }}" media="screen">
-    <link href="{{ url_for('static', filename='css/main.css') }}" rel="stylesheet" media="screen">
+    {% assets "js_all" %}
+        <script type="text/javascript" src="{{ ASSET_URL }}"></script>
+    {% endassets %}
+
+    {% assets "css_all" %}
+        <link href="{{ ASSET_URL }}" rel="stylesheet" type="text/css" />
+    {% endassets %}
+    
     {% block head %}{% endblock %}
+
 </head>
 
 <body>
