--- a/flatman/templates/main.html
+++ b/flatman/templates/main.html
@@ -4,19 +4,18 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-rc.1/angular.min.js" type="text/javascript" /></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-rc.1/angular-route.min.js" type="text/javascript" /></script>
 
-    <script src="{{ url_for('static', filename='js/controllers/navigation.js') }}" type="text/javascript" /></script>
-    <script src="{{ url_for('static', filename='js/filters.js') }}" type="text/javascript" /></script>
-    <script src="{{ url_for('static', filename='js/cselect.js') }}" type="text/javascript" /></script>
-    <script src="{{ url_for('static', filename='js/app.js') }}" type="text/javascript" /></script>
-
-
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>flatman</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link href="{{ url_for('static', filename='css/bootstrap.css') }}" rel="stylesheet" media="screen">
-    <link href="{{ url_for('static', filename='css/font-awesome.css') }}" rel="stylesheet" media="screen">
-    <link href="{{ url_for('static', filename='css/main.css') }}" rel="stylesheet" media="screen">
+
+    {% assets "js_all" %}
+        <script type="text/javascript" src="{{ ASSET_URL }}"></script>
+    {% endassets %}
+
+    {% assets "css_all" %}
+        <link href="{{ ASSET_URL }}" rel="stylesheet" type="text/css" />
+    {% endassets %}
 
 </head>
 <body>
@@ -44,8 +43,8 @@
                         {{ group.title }}
                     </div>
                     <ul>
-                        <li ng-repeat="item in group.items">
-                            <a ng-class="navClass('{{item.url}}')" href="#{{ item.url }}">
+                        <li ng-repeat="item in group.items" ng-class="navClass('{{item.url}}')">
+                            <a href="#{{ item.url }}">
                                 <i class="fa fa-{{ item.icon }}"></i>
                                 {{ item.title }}
                             </a>
