--- a/flatman/templates/main.html
+++ b/flatman/templates/main.html
@@ -5,7 +5,9 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-rc.1/angular-route.min.js" type="text/javascript" /></script>
 
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>flatman</title>
+    {% raw %}
+    <title>flatman {{ title ? (" - " + title) : ""}}</title>
+    {% endraw %}
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 
@@ -17,6 +19,10 @@
         <link href="{{ ASSET_URL }}" rel="stylesheet" type="text/css" />
     {% endassets %}
 
+    <script>
+        var AUTH_TOKEN = "{{ session.token }}";
+    </script>
+
 </head>
 <body>
 
@@ -24,33 +30,31 @@
 
 
     <div class="content">
-        <div class="menu">
+        <div class="menu" ng-controller="NavigationController as navigation">
             <div class="current-user">
                 <div class="avatar">
                     <img src="" alt="#TODO" class="avatar avatar-48">
                 </div>
                 <div class="username">
-                    #TODO:USERNAME
+                    {{ user.displayname }}
                     <div class="group">
-                        #TODO:GROUP
+                        {{ group.name }}
                     </div>
                 </div>
             </div>
 
-            <div ng-controller="NavigationController">
-                <div ng-repeat="group in groups">
-                    <div class="menu-header">
-                        {{ group.title }}
-                    </div>
-                    <ul>
-                        <li ng-repeat="item in group.items" ng-class="navClass('{{item.url}}')">
-                            <a href="#{{ item.url }}">
-                                <i class="fa fa-{{ item.icon }}"></i>
-                                {{ item.title }}
-                            </a>
-                        </li>
-                    </ul>
+            <div ng-repeat="group in groups">
+                <div class="menu-header">
+                    {{ group.title }}
                 </div>
+                <ul>
+                    <li ng-repeat="item in group.items" ng-class="navClass('{{item.url}}')">
+                        <a href="{{ item.url }}">
+                            <i class="fa fa-{{ item.icon }}"></i>
+                            {{ item.title }}
+                        </a>
+                    </li>
+                </ul>
             </div>
         </div>
 
