--- a/flatman/static/scss/main.scss
+++ b/flatman/static/scss/main.scss
@@ -4,15 +4,12 @@ body {
     font-family: $mainFont !important;
 }
 
-.navbar {
-    margin: 0;
-    font-size: 14px;
-    border: 0;
-    @include border-radius(0);
-}
-
-.form-control, .btn {
-    @include border-radius(0);
+.form-control, 
+.btn, 
+.list-group,
+.list-group-item,
+.input-group-addon {
+    @include border-radius(0 !important);
 }
 
 html, body {
@@ -23,122 +20,66 @@ html, body {
     line-height: 20px;
 }
 
-.content {
-    min-height: 100%;
-    height: auto !important;
-    height: 100%;
-    margin: 0 auto; /* the bottom margin is the negative value of the footer's height */
-    position: relative;
-    height: 100%;
+header {
+    background: $primaryColor;
+    border-bottom: 4px solid rgba(0, 0, 0, 0.2);
+    font-size: 12pt;
+    color: #FFF;
+    line-height: 60px;
     padding: 0;
-
-    > :first-child {
-        margin-top: 0;
-    }
 }
 
-.padding {
-    padding: 32px;
-    height: 100%;
-    position: relative;
-
-
-    > :first-child { 
-        margin-top: 0; 
-    }
-    > :last-child { 
-        margin-bottom: 0; 
-    }
-    > .page-header:first-child h1 {
-        margin-top: 0;
-    }
-}
-
-.page {
-    padding: 0;
-    overflow: auto;
-    position: absolute;
-    top: 0px;
-    left: 256px;
-    right: 0px;
-    bottom: 0px;
-    height: 100%;
-}
-
-.page-split {
-    position: absolute;
-    left: 0;
-    right: 0;
-    top: 0;
-    bottom: 0;
-    width: 100%;
-    height: 100%;
-    display: table;
-}
-
-.page-split .split {
-    display: table-cell;
-    width: 50%;
-    padding: 30px;
-}
-
-.menu {
-    width: 256px;
-    position: absolute;
-    top: 00px;
-    left: 0;
-    border-right: 1px solid #ccc;
-    bottom: 0;
-    overflow: auto;
-    background-color: #FAFAFA;
-    background-color: #FCFCFC;
-    box-shadow: 4px 0 10px rgba(0, 0, 0, 0.12);
-    font-size: 14px;
-
-    .menu-header {
-        padding: 16px;
-        padding-left: 64px;
-        text-transform: uppercase;
-        color: #888;
-        font-size: 12px;
-    }
+nav {
+    background: $secondaryColor;
+    margin-bottom: $navigationMargin;
+    // border-bottom: 4px solid $primaryColor;
 
     ul {
         list-style: none;
-        padding: 0;
+        display: flex;
+        margin: 0;
 
-        li a {
-            display: block;
-            color: #333;
-            text-decoration: none;
-            transition: padding-left 0.2s ease-in-out;
-            height: 40px;
-            padding: 8px 16px;
+        li {
+            flex-grow: 1;
+            text-align: center;
+            flex-basis: 0;
 
-            /* Menu icons */
-            i {
-                display: inline-block;
-                width: 32px;
-                margin-right: 16px;
-                font-size: 1.1em;
-                text-align: center;
-                -webkit-transition: font-size 0.2s;
-                vertical-align: middle;
+            a {
+                display: block;
+                color: #888;
+                padding: 16px;
+
+                i, span {
+                    display: block;
+                }
+
+                i {
+                    font-size: 2em;
+                }
+
+                span {
+                    margin-top: 2px;
+                    font-size: 10pt;
+                }
             }
+
+        }
+
+        li.active a,
+        li a:hover {
+            background: rgba(255, 255, 255, 1.0);
+            color: #888;
+            text-decoration: none;
         }
 
         li.active a {
-            color: #094;
-        }
-
-        li a:hover {
-            background: rgba(0, 0, 0, 0.03);
+            color: $primaryColor;
+            font-weight: bold;
         }
     }
 }
 
 img.avatar {
-    @include border-radius(8px);
     box-shadow: 0 2px 3px rgba(0, 0, 0, 0.3);
 }
 
@@ -148,20 +89,24 @@ img.avatar {
 }
 
 .current-user {
-    padding: 16px;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
-    background: $primaryColor;
+    float: right;
     color: #FFF;
+    text-align: right;
+    padding: 10px 0;
+    line-height: 1.3em;
 
     div {
         display: inline-block;
         vertical-align: middle;
     }
 
+    .avatar {
+        margin-left: 8px;
+    }
+
     .username {
         display: inline-block;
         font-size: 18px;
-        margin-left: 8px;
         text-shadow: 0 2px 3px rgba(0, 0, 0, 0.3);
     }
 
@@ -381,3 +326,119 @@ table.shopping {
 .amount {
     text-align: right;
 }
+
+
+
+
+.container {
+    position: relative;
+}
+
+.view.ng-enter {
+    // -webkit-animation:0.5s fadeIn;
+    // animation:0.5s fadeIn;
+}
+
+.view.ng-leave {
+    // -webkit-animation: 0.1s fadeOut;
+    // animation: 0.1s fadeOut;
+    position: absolute;
+    width: 100%;
+    padding-right: 30px;
+}
+
+
+.overlay {
+    position: absolute;
+    left: 50%;
+    top: 100px;
+}
+
+.overlay > * {
+    width: 600px;
+    margin-left: -300px;
+    background: #FFF;
+    border: 2px solid #EEE;
+    padding: 32px;
+}
+
+
+.shopping-items {
+    .item {
+        .purchased {
+            margin-right: 10px;
+        }
+
+        .title {
+            font-weight: bold;
+        }
+    }
+}
+
+.lolbtn {
+    border: 0;
+    background: transparent;
+    padding: 0;
+    margin: -7px;
+    width: 30px;
+    height: 30px;
+    line-height: 24px;
+    display: inline-block;
+    text-align: center;
+    // @include border-radius(400px);
+
+    &:focus {
+        outline: none;
+    }
+
+    &:hover, 
+    &:active {
+        background: rgba(0, 0, 0, 0.1);
+    }
+}
+
+.item-view.ng-hide-add {
+    -webkit-animation:0.1s fadeOut;
+    animation:0.1s fadeOut;
+}
+.item-edit.ng-hide-add {
+    -webkit-animation:0.5s fadeOut;
+    animation:0.5s fadeOut;
+}
+
+.item-edit.ng-hide-remove {
+    -webkit-animation:0.3s slideInRight;
+    animation:0.3s slideInRight;
+}
+
+.item-view.ng-hide-remove {
+    -webkit-animation:0.5s fadeIn;
+    animation:0.5s fadeIn;
+}
+
+.item-view.ng-hide-add,
+.item-view.ng-hide-remove {
+    position: absolute;
+}
+
+
+.group-image {
+    height: 200px;
+    overflow: hidden;
+    border: 0px solid #222;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: all 0.5s;
+
+    img {
+        width: 100%;
+    }
+
+    &.expanded {
+        height: 400px;
+        border: 5px solid #222;
+    }
+}
+
