--- a/flatman/templates/main.html
+++ b/flatman/templates/main.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html ng-app="app">
 <head>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-rc.1/angular.min.js" type="text/javascript" /></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-rc.1/angular-route.min.js" type="text/javascript" /></script>
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.0-rc.1/angular.min.js" type="text/javascript" /></script>
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.0-rc.1/angular-animate.min.js" type="text/javascript"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.0-rc.1/angular-route.min.js" type="text/javascript" /></script>
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.0-rc.1/angular-resource.min.js" type="text/javascript" /></script>
 
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     {% raw %}
@@ -24,43 +26,40 @@
     </script>
 
 </head>
-<body>
-
+<body ng-controller="NavigationController">
 {% raw %}
-
-
-    <div class="content">
-        <div class="menu" ng-controller="NavigationController as navigation">
+    <header>
+        <div class="container">
             <div class="current-user">
-                <div class="avatar">
-                    <img src="" alt="#TODO" class="avatar avatar-48">
-                </div>
                 <div class="username">
                     {{ user.displayname }}
                     <div class="group">
                         {{ group.name }}
                     </div>
                 </div>
-            </div>
-
-            <div ng-repeat="group in groups">
-                <div class="menu-header">
-                    {{ group.title }}
+                <div class="avatar">
+                    <img ng-attr-src="{{ user.mailhash | gravatar:36 }}" alt="{{ user.displayname }}" class="avatar">
                 </div>
-                <ul>
-                    <li ng-repeat="item in group.items" ng-class="navClass('{{item.url}}')">
-                        <a href="{{ item.url }}">
-                            <i class="fa fa-{{ item.icon }}"></i>
-                            {{ item.title }}
-                        </a>
-                    </li>
-                </ul>
             </div>
+
+            Flatman
         </div>
+    </header>
 
-        <div class="page" ng-view></div>
+    <nav>
+        <ul class="container">
+            <li ng-repeat="item in navigation.group.items" ng-class="navClass('{{item.url}}')">
+                <a href="{{ item.url }}">
+                    <i class="fa fa-{{ item.icon }}"></i>
+                    <span class="hidden-sm hidden-xs">{{ item.title }}</span>
+                </a>
+            </li>
+        </ul>
+    </nav>
+
+    <div class="container">
+        <article ng-view class="view"></article>
     </div>
-
-{% endraw %}
+    {% endraw %}
 </body>
 </html>
